green-banking/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    { { - include "green-banking.backend.selectorLabels" . | nindent 4 } }
  ports:
    - protocol: TCP
      port: { { .Values.backend.service.port } }
      targetPort: { { .Values.backend.service.port } }
