green-banking/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    { { - include "green-banking.frontend.selectorLabels" . | nindent 4 } }
  ports:
    - protocol: TCP
      port: 80
      targetPort: { { .Values.frontend.service.port } }
